--- a/index.html
+++ b/index.html
@@ -503,9 +503,9 @@
 
   <script>
     // ✅ Replace these with your real values:
-    const EMAILJS_PUBLIC_KEY = "YOUR_PUBLIC_KEY";   // EmailJS > Account > General
+    const EMAILJS_PUBLIC_KEY = "bNroIcdDjJFBux1B";  // EmailJS > Account > General
     const EMAILJS_SERVICE_ID = "service_69kjp0l";   // Your Service ID
-    const EMAILJS_TEMPLATE_ID = "YOUR_TEMPLATE_ID"; // EmailJS > Email Templates
+    const EMAILJS_TEMPLATE_ID = "template_o8lxp5e"; // EmailJS > Email Templates
 
     // Init EmailJS
     emailjs.init(EMAILJS_PUBLIC_KEY);
