--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
   <script>
     // ✅ Replace these with your real values:
     const EMAILJS_PUBLIC_KEY = "bNroIcdDjJFBux1B";  // EmailJS > Account > General
-    const EMAILJS_SERVICE_ID = "service_69kjp0l";   // Your Service ID
+    const EMAILJS_SERVICE_ID = "service_6gzjunt";   // Your Service ID
     const EMAILJS_TEMPLATE_ID = "template_o8lxp5e"; // EmailJS > Email Templates
 
     // Init EmailJS
